--- a/lec02_zw.html
+++ b/lec02_zw.html
@@ -56,7 +56,7 @@ class: middle, center
 
 Like R, Python is a dynamically typed language but the implementation details are very different (as it makes extensive use of an object oriented class system for implementation, more on this later).
 
-Some of the core types,
+Some of the core types
 
 .pull-left[
 
