--- a/Lec01_part2_git_tutorial.html
+++ b/Lec01_part2_git_tutorial.html
@@ -244,7 +244,7 @@ copy and paste it into gitlab (click your photo and user settings, find SSH Keys
 
 https://gitlab2.tamucc.edu/
 
----
+- `git remote -v` # show all remote 
 
 ---
 
@@ -293,6 +293,9 @@ https://gitlab2.tamucc.edu/
 #### 💡 - Main ideas
 - if the remote repository contains changes you don't have you cannot push any commits
 - pulling changes may conflict with your own commits (similar to merging a branch)
+
+#### 💡 - hard reset
+- `git reset --hard origin/master`
 
 ---
 ### Lesson 23 - Rebasing while pulling changes
